fix mobile form field overflow

--- a/src/app/features/tasks/tasks.scss
+++ b/src/app/features/tasks/tasks.scss
@@ -82,6 +82,11 @@
   .task-form-grid label:last-child {
     grid-column: auto;
   }
+
+  .task-form-grid input[type="date"] {
+    -webkit-appearance: none;
+    appearance: none;
+  }
 }
 
 
